--- a/src/index.pug
+++ b/src/index.pug
@@ -8,11 +8,13 @@ html(lang="en")
         title Document
     body 
         .wrapper 
-            include components/header 
-            +header 
+            //- include components/header 
+            //- +header 
             main.main 
-                include components/intro 
-                +intro 
+                //- include components/intro 
+                //- +intro 
+                include components/advantages 
+                +advantages 
             include components/footer 
             +footer
         script(src="js/app.min.js") 
