--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,6 +27,8 @@
     'layout/sidebar',
     'layout/intro',
     'layout/advantages',
+    'layout/teachers',
+    'layout/training',
     'layout/forms';
 
 // components
