--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -12,15 +12,15 @@
 }
 html{
     font-size: 16px;
-}
-html,
-body{
-    height: 100%;
+    width: 100%;
+    min-width: 100%;
 }
 body{
     background: #F4F6F8;
+    overflow-x: hidden;
 }
 .wrapper{
+    width: 100%;
     min-height: 100%;
     display: flex;
     flex-direction: column;
@@ -44,7 +44,7 @@ ul{
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    // @include media(576){
-    //     @include resa('max-width', 330px);
-    // }
+    @include media(576){
+        @include resa('max-width', 330px);
+    }
 }
