--- a/src/index.pug
+++ b/src/index.pug
@@ -15,6 +15,10 @@ html(lang="en")
                 //- +intro 
                 include components/advantages 
                 +advantages 
+                include components/teachers 
+                +teachers 
+                include components/training 
+                +training 
             include components/footer 
             +footer
         script(src="js/app.min.js") 
