--- a/src/scss/layout/_teachers.scss
+++ b/src/scss/layout/_teachers.scss
@@ -62,9 +62,11 @@
         @include res('padding-right', 40px);
         @include res('padding-bottom', 28px);
         @include res('padding-left', 30px);
-        box-shadow: 0px 0px 10px 0px rgba(2, 2, 2, 0.10);
+        box-shadow: 0px 0px .5208333333vw 0px rgba(2, 2, 2, 0.10);
         @include res('max-width', 580px);
         @include media(575){
+            @include resa('border-radius', 18px);
+            box-shadow: 0px 0px 1.5555555556vw 0px rgba(2, 2, 2, 0.10);
             @include resa('max-width', 560px);
             @include resa('padding-top', 16px);
             @include resa('padding-right', 20px);
