--- a/src/components/intro.pug
+++ b/src/components/intro.pug
@@ -2,10 +2,12 @@ mixin intro()
     section.intro#intro 
         .intro__bg 
             img(src="@img/intro-bg.png", alt="" draggable="false")
+        .intro__bg-sm
+            img(src="@img/intro-bg-sm.png", alt="" draggable="false")
         .intro__body.container
             .intro__breadcrumbs
             h1.intro__title ПОВЫШЕНИЕ КВАЛИФИКАЦИИ И ПРОФЕССИОНАЛЬНАЯ ПЕРЕПОДГОТОВКА ПЕДАГОГОВ
-            p.intro__p Получи официальные документы установленного образца о повышении квалификации и профессиональной переподготовке в соотвествии с ФГОС 
+            p.intro__p Получи документы установленного образца о повышении квалификации и профессиональной переподготовке в соотвествии с ФГОС 
             .intro__row 
                 .intro__col
                     a(href="#!").intro__btn Заявка на консультацию
