--- a/src/scss/layout/_intro.scss
+++ b/src/scss/layout/_intro.scss
@@ -10,18 +10,54 @@
         left: 50%;
         transform: translateX(-50%);
         @include res('width', 1600px);
-        @include res('height', 711px);
+        height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
+        overflow: hidden;
+        @include res('border-bottom-left-radius', 100px);
+        @include res('border-bottom-right-radius', 100px);
+        @include media(576){
+            display: none;
+        }
         img{
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
+        &-sm{
+            display: none;
+            @include media(576){
+                display: block;
+                z-index: -1;
+                position: absolute;
+                top: 0;
+                left: 0;
+                @include resa('width', 360px);
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
     }
     &__breadcrumbs{
         @include res('min-height', 22px);
+        @include media(576){
+            @include resa('min-height', 15px);
+            order: -3;
+        }
+    }
+    &__body{
+        @include media(576){
+            display: flex;
+            flex-direction: column;
+        }
     }
     &__title{
         @include res('padding-top', 18px);
@@ -33,6 +69,14 @@
         font-weight: 800;
         @include res('line-height', 54px);
         @include res('margin-bottom', 11px);
+        @include media(576){
+            @include resa('padding-top', 18px);
+            @include resa('font-size', 20px);
+            @include resa('line-height', 26px);
+            @include resa('max-width', 300px);
+            @include resa('margin-bottom', 12px);
+            order: -2;
+        }
     }
     &__p{
         color: #B8B8B8;
@@ -43,16 +87,31 @@
         @include res('line-height', 22px);
         @include res('max-width', 573px);
         @include res('margin-bottom', 38px);
+        @include media(576){
+            @include resa('font-size', 12px);
+            @include resa('line-height', 16px);
+            @include resa('max-width', 221px);
+        }
     }
     &__row{
         display: flex;
         @include res('gap', 20px);
+        @include media(576){
+            order: -1;
+        }
     }
     &__col{
         display: flex;
         flex-direction: column;
         align-items: center;
         @include res('gap', 4px);
+        @include media(576){
+            @include resa('gap', 4px);
+            @include resa('margin-bottom', 15px);
+            &:nth-of-type(2){
+                display: none;
+            }
+        }
     }
     &__btn{
         @include res('padding-top', 20px);
@@ -74,6 +133,13 @@
         text-decoration: none;
         line-height: 120%;
         transition: background 300ms ease-out;
+        @include media(576){
+            @include resa('height', 38px);
+            @include resa('font-size', 12px);
+            @include resa('line-height', 34px);
+            @include resa('border-radius', 6px);
+            @include resa('width', 180px);
+        }
         &:hover{
             background: lighten($color: #325CFE, $amount: 5);
         }
@@ -84,6 +150,10 @@
             font-style: normal;
             font-weight: 400;
             @include res('line-height', 16px);
+            @include media(576){
+                @include resa('font-size', 9px);
+                @include resa('line-height', 10px);
+            }
         }
     }
     &__cabinet{
