--- a/src/scss/layout/_advantages.scss
+++ b/src/scss/layout/_advantages.scss
@@ -138,6 +138,7 @@
         @include media(575){
             @include resa('font-size', 16px);
             @include resa('line-height', 22px);
+            @include resa('margin-bottom', 7px);
         }
     }
     &__desc{
@@ -151,6 +152,7 @@
         @include media(575){
             @include resa('font-size', 10px);
             @include resa('line-height', 14px);
+            @include resa('margin-bottom', 10px);
         }
         span{
             font-weight: 600;
