--- a/src/scss/layout/_advantages.scss
+++ b/src/scss/layout/_advantages.scss
@@ -25,9 +25,9 @@
         &::before{
             content: '';
             position: absolute;
-            width: calc(100% + 28px);
-            left: -15px;
-            right: -15px;
+            @include resa('width', 360px);
+            @include resa('left', -15px);
+            @include resa('right', -15px);
             height: 100%;
             background: #fff;
             z-index: -1;
