--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -10,18 +10,34 @@
     justify-content: center;
     @include res('height', 68px);
     transition: background 300ms ease-out, height 300ms ease-out;
-    &.fixed{
-        background: #fff;
-        @include res('height', 60px);
-        .header{
-            &__nav{
-                box-shadow: none;
-            }
-            &__text{
-                display: none;
-            }
-            &__right{
-                display: none;
+    @include media(576){
+        @include resa('height', 45px);
+    }
+    @media (min-width: 577px){
+        &.fixed{
+            background: #fff;
+            @include res('height', 60px);
+            .header{
+                &__nav{
+                    box-shadow: none;
+                }
+                &__text{
+                    display: none;
+                }
+                &__right{
+                    display: none;
+                }
+                &__scroll{
+                    display: flex;
+                }
+                &__link{
+                    @include res('height', 25px);
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    @include res('font-size', 14px);
+                    @include res('line-height', 22px);
+                }
             }
         }
     }
@@ -99,6 +115,10 @@
         @include res('border-radius', 5px);
         text-decoration: none;
         background: #325CFE;
+        transition: background 300ms ease-out;
+        &:hover{
+            background: lighten($color: #325CFE, $amount: 5);
+        }
     }
     &__right{
         display: flex;
@@ -140,6 +160,28 @@
                 @include resa('width', 25px);
                 @include resa('height', 25px);
             }
+        }
+    }
+    &__scroll{
+        color: #325CFE;
+        @include res('gap', 6px);
+        @include res('height', 25px);
+        @include res('border-radius', 5px);
+        border: solid #325CFE;
+        @include res('padding-left', 8px);
+        @include res('padding-right', 8px);
+        @include res('border-width', 1px);
+        align-items: center;
+        justify-content: center;
+        @include res('font-size', 14px);
+        font-style: normal;
+        font-weight: 500;
+        @include res('line-height', 22px);
+        display: none;
+        text-decoration: none;
+        svg{
+            @include res('width', 18px);
+            @include res('height', 18px);
         }
     }
     &__mob{
