--- a/src/scss/layout/_teachers.scss
+++ b/src/scss/layout/_teachers.scss
@@ -10,15 +10,19 @@
     &::before{
         content: '';
         position: absolute;
-        background: url(../img/teachers-bg.png) center / cover no-repeat;
+        background: url('../img/teachers-bg.png') center / cover no-repeat;
         top: 0;
         @include res('height', 220px);
         @include res('width', 1650px);
         left: 0;
         z-index: -1;
+        @include res('border-start-end-radius', 30px);
+        @include res('border-end-end-radius', 30px);
         @include media(575){
             @include resa('height', 143px);
-            @include resa('width', 580px);
+            @include resa('width', 360px);
+            border-start-end-radius: 0;
+            border-end-end-radius: 0;
         }
     }
     &__title{
