--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -19,7 +19,10 @@ body{
     background: #F4F6F8;
     overflow-x: hidden;
     &.home{
-        background: url('../img/home-bg.png') top center / cover no-repeat;
+        background: url('../img/home-bg.png'), #F4F6F8;
+        background-position: top center;
+        background-size: 100% auto;
+        background-repeat: no-repeat;        
     }
 }
 .wrapper{
