--- a/src/components/intro.pug
+++ b/src/components/intro.pug
@@ -25,3 +25,9 @@ mixin intro()
                         </svg>
                         | Личный кабинет 
                     p.intro__btn-p Вы можете войти без регистрации
+            a(href="#!").intro__video 
+                <svg width="57" height="57" viewBox="0 0 57 57" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="28.5" cy="28.5" r="28.5" fill="#325CFE"/>
+                <path d="M20.2929 16.69L42.4737 28.4696L21.1819 41.789L20.2929 16.69Z" fill="white"/>
+                </svg>
+                span Посмотри короткое видео о нашем Центре
