--- a/src/scss/layout/_intro.scss
+++ b/src/scss/layout/_intro.scss
@@ -58,9 +58,61 @@
         }
     }
     &__body{
+        position: relative;
         @include media(576){
             display: flex;
             flex-direction: column;
+        }
+    }
+    &__video{
+        border-radius: 2.6041666667vw .78125vw .78125vw 2.6041666667vw;
+        border: dashed #325CFE;
+        @include res('border-width', 1px);
+        @include res('width', 280px);
+        @include res('height', 84px);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        @include res('padding-left', 15px);
+        @include res('padding-right', 19px);
+        @include res('gap', 8px);
+        text-decoration: none;
+        position: absolute;
+        top: 0;
+        right: 0;
+        @include media(576){
+            position: relative;
+            @include resa('margin-top', 30px);
+            @include resa('gap', 11px);
+            @include resa('width', 184px);
+            @include resa('height', 55px);
+            @include resa('padding-left', 11px);
+            @include resa('padding-right', 12px);
+            flex-direction: row-reverse;
+            @include resa('border-width', 1px);
+            border-radius: 2.7777777778vw 8.8888888889vw 8.8888888889vw 2.7777777778vw;
+            span{
+                @include resa('font-size', 10px);
+                @include resa('line-height', 12px);
+            }
+            svg{
+                @include resa('width', 37px);
+                @include resa('min-width', 37px);
+                @include resa('height', 37px);
+            }
+        }
+        span{
+            color: #FFF;
+            @include res('font-size', 16px);
+            font-style: normal;
+            font-weight: 300;
+            @include res('line-height', 22px);
+            text-decoration: none;
+        }
+        svg{
+            @include res('width', 57px);
+            @include res('min-width', 57px);
+            @include res('height', 57px);
         }
     }
     &__title{
@@ -95,6 +147,7 @@
             @include resa('font-size', 12px);
             @include resa('line-height', 16px);
             @include resa('max-width', 221px);
+            margin-bottom: 0;
         }
     }
     &__row{
