--- a/src/components/training.pug
+++ b/src/components/training.pug
@@ -40,3 +40,9 @@ mixin training()
                         p.training__title ЮР. лица
                         p.training__desc Исполнили свыше 1200 договоров и контрактов с юридическими лицами.
                         a(href="#!").training__card-link Получить контракт →
+            .training__content 
+                .training__img  
+                    img(src="@img/training-img-4.png", alt="" draggable="false")
+                .training__content-right 
+                    .training__subtitle Вы можете получить #[span налоговый вычет] 13% от государства за СВОЕ обучение
+                    a(href="#!").training__button Узнать подробности 
