--- a/src/index.pug
+++ b/src/index.pug
@@ -19,6 +19,8 @@ html(lang="en")
                 +teachers 
                 include components/training 
                 +training 
+                include components/documents 
+                +documents 
             include components/footer 
             +footer
         script(src="js/app.min.js") 
