--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,6 +29,7 @@
     'layout/advantages',
     'layout/teachers',
     'layout/training',
+    'layout/documents',
     'layout/forms';
 
 // components
