--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,1 +1,127 @@
-// Футер
+.footer{
+    background: #181818;
+    @include res('padding-top', 80px);
+    &__top{
+        @include res('padding-bottom', 15px);
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        @include res('gap', 40px);
+    }
+    &__logo{
+        @include res('border-radius', 15px);
+        background: #FFF;
+        @include res('padding-top', 12px);
+        @include res('padding-bottom', 10px);
+        @include res('padding-left', 10px);
+        @include res('padding-right', 30px);
+        @include res('width', 279px);
+        text-decoration: none;
+        svg{
+            @include res('margin-bottom', 4px);
+        }
+        span{
+            display: block;
+            @include res('margin-left', 12px);
+            color: #000;
+            @include res('font-size', 10px);
+            font-style: normal;
+            font-weight: 500;
+            @include res('line-height', 14px);
+        }
+    }
+    &__list{
+        display: flex;
+        flex-direction: column;
+        @include res('gap', 6px);
+    }
+    &__link{
+        color: #FFF;
+        @include res('font-size', 12px);
+        font-style: normal;
+        font-weight: 400;
+        @include res('line-height', 22px);
+        text-decoration-line: underline;
+        text-transform: uppercase;
+    }
+    &__info{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        &-item{
+            display: flex;
+            align-items: center;
+            @include res('gap', 14px);
+            background: #FFFFFF;
+            @include res('border-radius', 15px);
+            overflow: hidden;
+            @include res('width', 330px);
+            @include res('height', 67px);
+            @include res('margin-bottom', 15px);
+            svg{
+                @include res('width', 83px);
+                @include res('min-width', 83px);
+                @include res('height', 67px);
+            }
+            &-div{
+                display: flex;
+                flex-direction: column;
+                span{
+                    color: #242424;
+                    @include res('font-size', 20px);
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 120%;
+                    @include res('margin-bottom', 2px);
+                }
+                a{
+                    color: #1651E9;
+                    @include res('font-size', 12px);
+                    font-style: normal;
+                    font-weight: 500;
+                    @include res('line-height', 14px);
+                }
+            }
+        }
+        &-row{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            @include res('gap', 24px);
+        }
+        &-link{
+            color: rgba(255, 255, 255, 0.70);
+            @include res('font-size', 18px);
+            font-style: normal;
+            font-weight: 500;
+            @include res('line-height', 27px);
+            text-decoration: none;
+        }
+        &-tel{
+            color: rgba(255, 255, 255, 0.70);
+            @include res('font-size', 18px);
+            font-style: normal;
+            font-weight: 500;
+            @include res('line-height', 28px);
+            text-decoration-line: underline;
+        }
+    }
+    &__bot{
+        border-top: solid rgba(255, 255, 255, 0.10);
+        @include res('border-width', 1px);
+        @include res('padding-top', 24px);
+        @include res('padding-bottom', 30px);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        &-link{
+            color: rgba(255, 255, 255, 0.50);
+            @include res('font-size', 16px);
+            font-style: normal;
+            font-weight: 400;
+            @include res('line-height', 22px);
+            text-decoration-line: underline;
+        }
+    }
+}
