--- a/src/components/footer.pug
+++ b/src/components/footer.pug
@@ -15,6 +15,9 @@ mixin footer()
                         </defs>
                     </svg>
                     span (лицензия на осуществление образовательной деятельности №9757-л, свидетельство о регистрации СМИ №ЭЛ ФС 77-65391)
+                .footer__mob 
+                    a(href="#!").footer__mob-tel 8 (800) 350-54-64 
+                    a(href="#!").footer__mob-link hello@uchitelu.ru 
                 .footer__list 
                     a(href="#!").footer__link Курсы повышения квалификации 
                     a(href="#!").footer__link Курсы ПРОФЕССИОНАЛЬНОЙ ПЕРЕПОДГОТОВКИ
