--- a/src/components/benefits.pug
+++ b/src/components/benefits.pug
@@ -1,3 +1,34 @@
 mixin benefits()
     .benefits 
         .benefits__body.container
+            h2.benefits__title ПОЛУЧИТЕ #[span МАКСИМУМ] ПОЛЬЗЫ #[br] ОТ НАШЕГО ПОРТАЛА:
+            .benefits__content 
+                .benefits__top 
+                    .benefits__item.lg 
+                        .benefits__left 
+                            p.benefits__subtitle Участвуйте в бесплатных вебинарах и мастер-классах
+                            p.benefits__desc Принимайте участие в вебинарах вместе с нами! И получайте сертификаты! Уже более 10 000 человек приняли участие, присоединяйся и ты!
+                            a(href="#!").benefits__link Публикация в издании →
+                        .benefits__img 
+                            img(src="@img/benefits-img-1.png", alt="" draggable="false") 
+                        .benefits__bg 
+                            img(src="@img/benefits-bg-1.png", alt="" draggable="false")
+                .benefits__bottom
+                    .benefits__item.sm 
+                        .benefits__left 
+                            p.benefits__subtitle Публикуйте свои материалы в СМИ 
+                            p.benefits__desc Мгновенная публикация в журнале“Наука XXI века” и #[span выдача свидетельства.]
+                            a(href="#!").benefits__link Публикация в СМИ →
+                        .benefits__img 
+                            img(src="@img/benefits-img-2.png", alt="" draggable="false") 
+                        .benefits__bg 
+                            img(src="@img/benefits-bg-2.png", alt="" draggable="false")
+                    .benefits__item.bg 
+                        .benefits__left 
+                            p.benefits__subtitle Публикуйте свои материалы в печатных изданиях
+                            p.benefits__desc Публикация в печатных изданиях, с выдачей экземпляра книги по почте, свидетельства и справки о публикации.
+                            a(href="#!").benefits__link Публикация в издании →
+                        .benefits__img 
+                            img(src="@img/benefits-img-3.png", alt="" draggable="false") 
+                        .benefits__bg 
+                            img(src="@img/benefits-bg-3.png", alt="" draggable="false")
