--- a/src/index.pug
+++ b/src/index.pug
@@ -21,6 +21,12 @@ html(lang="en")
                 +training 
                 include components/documents 
                 +documents 
+                include components/benefits 
+                +benefits
+                include components/samples 
+                +samples 
+                include components/reviews 
+                +reviews 
             include components/footer 
             +footer
         script(src="js/app.min.js") 
