--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,6 +30,8 @@
     'layout/teachers',
     'layout/training',
     'layout/documents',
+    'layout/benefits',
+    'layout/samples',
     'layout/forms';
 
 // components
