--- a/src/index.pug
+++ b/src/index.pug
@@ -21,6 +21,8 @@ html(lang="en")
                 +training 
                 include components/documents 
                 +documents 
+                include components/faq 
+                +faq 
             include components/footer 
             +footer
         script(src="js/app.min.js") 
