--- a/src/scss/layout/_faq.scss
+++ b/src/scss/layout/_faq.scss
@@ -1,9 +1,27 @@
 .faq{
     @include res('padding-top', 80px);
     @include res('padding-bottom', 130px);
+    position: relative;
+    isolation: isolate;
     @include media(576){
         @include resa('padding-top', 10px);
-        @include res('padding-bottom', 560px);
+        @include resa('padding-bottom', 56px);
+    }
+    &::before{
+        content: '';
+        position: absolute;
+        @include res('bottom', 58px);
+        left: 0;
+        @include res('width', 1350px);
+        @include res('height', 711px);
+        background: url('../img/faq-bg.png') center / cover no-repeat;
+        z-index: -1;
+        border-radius: 0 1.5624999999vw 1.5624999999vw 0;
+        @include media(576){
+            @include resa('bottom', 40px);
+            @include resa('width', 288px);
+            border-radius: 0 2.2222222222vw 2.2222222222vw 0;
+        }
     }
     &__body{
         @include res('border-radius', 10px);
@@ -14,6 +32,11 @@
         flex-direction: column;
         align-items: center;
         box-shadow: 0px 0px .5208333333vw 0px rgba(0, 0, 0, 0.10);
+        @include media(576){
+            @include resa('border-radius', 8px);
+            @include resa('padding-top', 15px);
+            @include resa('padding-bottom', 12px);
+        }
     }
     &__title{
         margin-left: auto;
@@ -27,6 +50,41 @@
         @include res('line-height', 54px);
         text-transform: uppercase;
         @include res('margin-bottom', 33px);
+        @include media(576){
+            width: calc(100% - 8.3333333333vw);
+            @include resa('font-size', 16px);
+            @include resa('line-height', 20px);
+            @include resa('margin-bottom', 15px);
+        }
+    }
+    &__button{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: max-content;
+        color: #FFF;
+        @include res('font-size', 20px);
+        @include res('line-height', 53px);
+        @include res('margin-top', 44px);
+        @include res('padding-top', 4px);
+        @include res('padding-bottom', 4px);
+        @include res('padding-right', 68px);
+        @include res('padding-left', 68px);
+        @include res('border-radius', 10px);
+        font-style: normal;
+        font-weight: 700;
+        background: #325CFE;
+        text-decoration: none;
+        @include media(576){
+            @include resa('font-size', 12px);
+            @include resa('line-height', 16px);
+            @include resa('margin-top', 12px);
+            @include resa('padding-top', 8px);
+            @include resa('padding-bottom', 8px);
+            @include resa('padding-right', 30px);
+            @include resa('padding-left', 30px);
+            @include resa('border-radius', 3px);
+        }
     }
     .accordion{
         width: calc(100% - 1.0416666667vw);
@@ -36,6 +94,12 @@
         @include res('border-width', 1px);
         @include res('padding-right', 50px);
         @include res('padding-left', 135px);
+        @include media(576){
+            @include resa('border-width', 1px);
+            @include resa('padding-right', 6px);
+            @include resa('padding-left', 8px);
+            width: calc(100% - 5.5555555556vw);
+        }
         &:last-of-type{
             border-bottom: solid rgba(#000, 0.1);
             @include res('border-width', 1px);
@@ -54,21 +118,39 @@
             justify-content: flex-start;
             cursor: pointer;
             user-select: none;
+            @include media(576){
+                @include resa('font-size', 12px);
+                @include resa('padding-top', 10px);
+                @include resa('padding-bottom', 10px);
+                @include resa('line-height', 12px);
+            }
             span{
                 color: #325CFE;
                 text-align: center;
                 @include res('font-size', 14px);
+                @include res('line-height', 60px);
+                @include res('margin-right', 30px);
                 font-style: normal;
                 font-weight: 700;
-                @include res('line-height', 60px);
                 display: block;
-                @include res('margin-right', 30px);
+                @include media(576){
+                    @include resa('font-size', 12px);
+                    @include resa('line-height', 16px);
+                    @include resa('margin-right', 18px);
+                }
             }
             svg{
                 margin-left: auto;
                 @include res('width', 18px);
                 @include res('min-width', 18px);
                 @include res('height', 18px);
+                @include res('margin-left', 10px);
+                @include media(576){
+                    @include resa('width', 15px);
+                    @include resa('min-width', 15px);
+                    @include resa('height', 15px);
+                    @include resa('margin-left', 10px);
+                }
             }
         }
         &__content{
@@ -80,10 +162,16 @@
             &-body{
                 height: max-content;
                 @include res('padding-bottom', 23px);
+                @include media(576){
+                    @include resa('padding-bottom', 4px);
+                }
                 p{
                     @include res('font-size', 18px);
                     line-height: 120%;
-                    color: #5b5b5b;
+                    color: #000;
+                    @include media(576){
+                        @include resa('font-size', 12px);
+                    }
                 }
             }
         }
