--- a/src/scss/layout/_faq.scss
+++ b/src/scss/layout/_faq.scss
@@ -118,25 +118,27 @@
             justify-content: flex-start;
             cursor: pointer;
             user-select: none;
+            @include res('gap', 10px);
             @include media(576){
                 @include resa('font-size', 12px);
                 @include resa('padding-top', 10px);
                 @include resa('padding-bottom', 10px);
                 @include resa('line-height', 12px);
+                @include resa('gap', 10px);
             }
             span{
                 color: #325CFE;
                 text-align: center;
                 @include res('font-size', 14px);
                 @include res('line-height', 60px);
-                @include res('margin-right', 30px);
+                @include res('margin-right', 20px);
                 font-style: normal;
                 font-weight: 700;
                 display: block;
                 @include media(576){
                     @include resa('font-size', 12px);
                     @include resa('line-height', 16px);
-                    @include resa('margin-right', 18px);
+                    @include resa('margin-right', 8px);
                 }
             }
             svg{
@@ -144,12 +146,10 @@
                 @include res('width', 18px);
                 @include res('min-width', 18px);
                 @include res('height', 18px);
-                @include res('margin-left', 10px);
                 @include media(576){
                     @include resa('width', 15px);
                     @include resa('min-width', 15px);
                     @include resa('height', 15px);
-                    @include resa('margin-left', 10px);
                 }
             }
         }
