--- a/src/components/teachers.pug
+++ b/src/components/teachers.pug
@@ -30,7 +30,7 @@ mixin teachers()
                         p.teachers__desc Обучайтесь в любое удобное время и получите документы не отличающиеся от документов при очном обучении.
 
 
-mixin teachers2()
+mixin ratesTeachers()
     .teachers.teachers__second 
         .teachers__body.container 
             .teachers__wrapper 
@@ -59,3 +59,4 @@ mixin teachers2()
                             p.teachers__subtitle ДистанционноЕ ОБУЧЕНИЕ
                         p.teachers__desc Обучение проводится с использованием дистанционных технологий. В выдаваемых документах форма обучения не указываются.  
                         p.teachers__desc Обучайтесь в любое удобное время и получите документы не отличающиеся от документов при очном обучении.
+            h2.teachers__title НАМ ДОВЕРЯЮТ БОЛЕЕ  #[span 300 000] КВАЛИФИЦИРОВАННЫХ  ПЕДАГОГОВ И ВОСПИТАТЕЛЕЙ, ВЕДЬ У НАС:
