--- a/src/rates.pug
+++ b/src/rates.pug
@@ -14,7 +14,7 @@ html(lang="en")
                 include components/intro 
                 +intro
                 include components/teachers
-                +teachers2 
+                +ratesTeachers 
                 include components/training 
                 +training 
                 include components/documents 
