--- a/src/rates.pug
+++ b/src/rates.pug
@@ -12,7 +12,7 @@ html(lang="en")
             +header 
             main.main 
                 include components/intro 
-                +intro
+                +rates-intro
                 include components/teachers
                 +teachers2 
                 include components/training 
