--- a/src/components/intro.pug
+++ b/src/components/intro.pug
@@ -61,3 +61,6 @@ mixin rates-intro()
                         </svg>
                         | Личный кабинет 
                     p.intro__btn-p Вы можете войти без регистрации
+            .intro__price 
+                p.intro__price-del от <del>1700р</del>
+                p.intro__price-p 990р
